--- a/css/contact.css
+++ b/css/contact.css
@@ -11,12 +11,13 @@
   opacity: 1;
 }
 
-@media only screen and (max-device-width: 600px) { 
-	.cityscapes {
-		opacity: 1;
-	}
+@media only screen and (max-device-width: 600px) {
+  .cityscapes {
+    opacity: 1;
+  }
 }
 
-form {
-	color: black;
+input {
+  color: black;
 }
+
